[package]
name = "rust-cli-masker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "masker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
rayon = "1.7.0"
clap = { version = "4.2.5", features = ["cargo"]}
num_cpus = "1.15.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.21"

tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt"]}

async-trait = "0.1.68"
csv = "1.2.1"