[workspace]
members = [
    "med_cli",
    "med_core",
]

[workspace.dependencies]  
tokio = { version = "^1.28.0", features = ["full"] }
clap = { version = "^4.2.5", features = ["cargo"]}
tracing = { version = "^0.1.37", features = ["log"] }
tracing-subscriber = { version = "^0.3.17", default-features = false, features = ["fmt"]}
colored = "^2.0.0"
num_cpus = "^1.15.0"
serde_json = "^1.0.96"
openssl = { version = "0.10.52", features = ["vendored"] }
