[package]
name = "med_cli"
version = "0.5.5"
edition = "2021"
authors = ["Wei Huang <jayhuang75@hotmail.com>"]
license = "Apache-2.0"
description = "A Rust Powered CLI tool for CSV/JSON Masking, Encryption, and Decryption."
readme = "README.md"
homepage = "https://github.com/jayhuang75/rust-cli-med"
repository = "https://github.com/jayhuang75/rust-cli-med"
keywords = ["cli", "encrypt", "decrypt", "masking"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "med"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }
num_cpus = { workspace = true }
serde_json = { workspace = true}
med_core = { version = "0.5.5", path = "../med_core"}


