[package]
name = "med_core"
version = "0.6.0"
edition = "2021"
authors = ["Wei Huang <jayhuang75@hotmail.com>"]
license = "Apache-2.0"
description = "A Rust Powered Core Engine for M.E.D. Masking, Encryption, and Decryption CSV/JSON"
readme = "README.md"
homepage = "https://github.com/jayhuang75/rust-cli-med"
repository = "https://github.com/jayhuang75/rust-cli-med"
keywords = ["cli", "encrypt", "decrypt", "masking"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace=true }
num_cpus = { workspace = true }
serde_json = { workspace = true}

async-trait = "0.1.68"
rayon = "1.7.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite", "offline"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"

csv = "1.2.2"
flume = "0.10.14"
walkdir = "2.3.3"
threadpool = "1.8.1"
magic-crypt = "3.1.12"
indicatif = {version = "0.17.4", features = ["rayon"]}
whoami = "1.4.0"

dirs = "5.0.1"

[build-dependencies]
openssl = { workspace = true }